Criação dos testes unitários do interactor e viewModel

--- a/Bitcoin.xcodeproj/xcshareddata/xcschemes/Bitcoin-Blockchain.xcscheme
+++ b/Bitcoin.xcodeproj/xcshareddata/xcschemes/Bitcoin-Blockchain.xcscheme
@@ -40,8 +40,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8B688CF0253FB0D900E25C9B"
+               BuildableName = "BitcoinTests.xctest"
+               BlueprintName = "BitcoinTests"
+               ReferencedContainer = "container:Bitcoin.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
